Add email and document management